--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     let data = [];
 
     // Charger les données depuis data.json
-    fetch('data.json')
+    fetch('resultats.json')
       .then(response => response.json())
       .then(json => data = json);
 
