--- a/index.html
+++ b/index.html
@@ -99,14 +99,13 @@
 
     <!-- Filtre par catégorie -->
     <div class="filters" id="filters">
-      <button class="filter-button" data-category="HTML5">HTML5</button>
-      <button class="filter-button" data-category="CSS3">CSS3</button>
-      <button class="filter-button" data-category="JavaScript">JavaScript</button>
-      <button class="filter-button" data-category="Python">Python</button>
-      <button class="filter-button" data-category="React">React</button>
-      <button class="filter-button" data-category="Node.js">Node.js</button>
-      <button class="filter-button" data-category="CyberSécurité">CyberSécurité</button>
+      <button class="filter-button" data-category="Actualités">Actualités</button>
       <button class="filter-button" data-category="Réseaux sociaux">Réseaux sociaux</button>
+      <button class="filter-button" data-category="Restaurant">Restaurant</button>
+      <button class="filter-button" data-category="Shopping">Shopping</button>
+      <button class="filter-button" data-category="Informatique">Informatique</button>
+      <button class="filter-button" data-category="Coder">Coder</button>
+      <button class="filter-button" data-category="Musique">Musique</button>
     </div>
 
     <div id="results" class="results"></div>
