--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     const resultsPerPage = 100;
 
     // Charger les données depuis le fichier JSON
-    fetch('resultats_pagination.json')
+    fetch('recherches_25MB.json')
       .then(response => response.json())
       .then(json => {
         data = json;
